Add ts-node configuration for commonjs module support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,6 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "ts-node": {"compilerOptions": {"module": "commonjs"}},
   "exclude": ["node_modules"]
 }
