--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@datastax/astra-db-ts": "^1.1.0",
+    "axios": "^1.10.0",
     "dotenv": "^16.4.5",
     "langchain": "^0.1.36",
     "next": "14.2.3",
     "openai": "^4.41.0",
+    "puppeteer": "^19.11.1",
     "react": "^18",
     "react-dom": "^18",
     "ts-node": "^10.9.2"
